2020-01-28  Brent Fulgham  <bfulgham@apple.com>

        Reset the application bundle identifier between test runs
        https://bugs.webkit.org/show_bug.cgi?id=206858
        <rdar://problem/58844002>

        Reviewed by Per Arne Vollan.

        Clear the application bundle identifier set during testing when resetting the test system
        to a known state in preparation for the next run.

        * WebKitTestRunner/TestController.cpp:
        (WTR::TestController::resetStateToConsistentValues): Clear any override for the application
        bundle identifier before the next test invocation.
        * WebKitTestRunner/cocoa/TestControllerCocoa.mm:
        (WTR::TestController::setApplicationBundleIdentifier): Correct an over-release caused by assigning
        an autorelease return value to an NSRetainPtr.
        (WTR::TestController::clearApplicationBundleIdentifierTestingOverride): Added.

2020-01-28  Aakash Jain  <aakash_jain@apple.com>

        EWS django app should send cq+ patches to commit-queue
        https://bugs.webkit.org/show_bug.cgi?id=206534

        Reviewed by Jonathan Bedard.

        * BuildSlaveSupport/ews-app/ews/common/buildbot.py:
        (Buildbot.send_patch_to_buildbot): Added support to send to commit queue.
        * BuildSlaveSupport/ews-app/ews/config.py: Added COMMIT_QUEUE_PORT.
        * BuildSlaveSupport/ews-app/ews/fetcher.py: Added support for sending patches to commit queue.
        * BuildSlaveSupport/ews-app/ews/migrations/0003_patch_sent_to_commit_queue.py: Added.
        * BuildSlaveSupport/ews-app/ews/models/patch.py:
        (Patch): Added sent_to_commit_queue field in patch table.
        (Patch.is_patch_sent_to_commit_queue): Method to check if patch is sent to commit queue.
        (Patch.set_sent_to_commit_queue): Set sent_to_commit_queue field.

2020-01-28  Stephan Szabo  <stephan.szabo@sony.com>

        Python 3: Update windows scripts and uses of is constant